nextcloud/egress-nextcloud.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-nextcloud
  namespace: nextcloud
spec:
  selector: app == 'nextcloud'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: kubedb.com/name == 'nextcloud-mysql'
        ports:
          - 3306
    - action: Allow
      protocol: TCP
      destination:
        selector: kubedb.com/name == 'nextcloud-redis'
        ports:
          - 6379
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
          - 443
          - 465
