nextcloud/ingress-nextcloud-redis.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-nextcloud-redis
  namespace: nextcloud
spec:
  selector: kubedb.com/name == 'nextcloud-redis'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app == 'nextcloud'
      destination:
        ports:
          - 6379
